force-app/main/default/objects/Display_Asset__c/Display_Asset__c.object-meta.xml
<CustomObject>
    <label>Display Asset</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Display Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Display Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>