force-app/main/default/objects/Display_Asset__c/fields/Board_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Board_Inventory__c</fullName>
    <label>Board Inventory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Series__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Allora FP809</fullName>
            </value>
            <value>
                <fullName>Alysse Floor FP810</fullName>
            </value>
            <value>
                <fullName>Alysse Wall FP811</fullName>
            </value>
            <value>
                <fullName>Amber Valley FP793</fullName>
            </value>
            <value>
                <fullName>Antissa FP824</fullName>
            </value>
            <value>
                <fullName>AO Carriage House Buckskin Board 705</fullName>
            </value>
            <value>
                <fullName>AO Carriage House Canvas Board 706</fullName>
            </value>
            <value>
                <fullName>AO Carriage House Straw Board 704</fullName>
            </value>
            <value>
                <fullName>AO Greenwich Village Board 721</fullName>
            </value>
            <value>
                <fullName>AO Vallano Caramel Board 709</fullName>
            </value>
            <value>
                <fullName>AO Vallano Dark Chocolate Board 707</fullName>
            </value>
            <value>
                <fullName>AO Vallano Macademia Board 708</fullName>
            </value>
            <value>
                <fullName>Artistic Metalwork FP728</fullName>
            </value>
            <value>
                <fullName>Ash Creek FP788</fullName>
            </value>
            <value>
                <fullName>Avenue One FP792</fullName>
            </value>
            <value>
                <fullName>Belmar Floor FP840</fullName>
            </value>
            <value>
                <fullName>Belmar Wall FP839</fullName>
            </value>
            <value>
                <fullName>Bianco Venatino Board 1010</fullName>
            </value>
            <value>
                <fullName>Bright/Matte Linea FP795</fullName>
            </value>
            <value>
                <fullName>Bright/Matte Profiles FP796</fullName>
            </value>
            <value>
                <fullName>Cache FP731</fullName>
            </value>
            <value>
                <fullName>Candalara Glass FP768</fullName>
            </value>
            <value>
                <fullName>Carriage House Floor FP758</fullName>
            </value>
            <value>
                <fullName>Carriage House Wall FP759</fullName>
            </value>
            <value>
                <fullName>Castellano Stone FP772</fullName>
            </value>
            <value>
                <fullName>Catarina Floor FP786</fullName>
            </value>
            <value>
                <fullName>Catarina Wall FP787</fullName>
            </value>
            <value>
                <fullName>Chloe FP729</fullName>
            </value>
            <value>
                <fullName>Costa Rei Floor FP779</fullName>
            </value>
            <value>
                <fullName>Costa Rei Wall FP780</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>