force-app/main/default/objects/Display_Asset__c/fields/Exclude_From_Updates__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if the account&apos;s display is to be excluded from future product updates.</description>
    <inlineHelpText>Check the box if the account&apos;s display is to be excluded from future product updates.</inlineHelpText>
    <label>Exclude From Updates</label>
    <type>Checkbox</type>
</CustomField>