force-app/main/default/objects/Display_Asset__c/fields/Last_Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventory_Date__c</fullName>
    <description>Date display was last checked for discontinued items, new intros, etc.</description>
    <inlineHelpText>Date display was last checked for discontinued items, new intros, etc.</inlineHelpText>
    <label>Last Inventory Date</label>
    <type>Date</type>
</CustomField>