force-app/main/default/objects/Display_Asset__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vendor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12x24 BAM Waterfall</fullName>
            </value>
            <value>
                <fullName>12x24 Blue Waterfall</fullName>
            </value>
            <value>
                <fullName>12x24 Loose</fullName>
            </value>
            <value>
                <fullName>12x24 Now Waterfall</fullName>
            </value>
            <value>
                <fullName>12x24 Shades Watefall</fullName>
            </value>
            <value>
                <fullName>12x24 Structure Waterfall</fullName>
            </value>
            <value>
                <fullName>Adena</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>AO Boards</fullName>
            </value>
            <value>
                <fullName>AO Library</fullName>
            </value>
            <value>
                <fullName>AO Plank Spinner Display</fullName>
            </value>
            <value>
                <fullName>At Home</fullName>
            </value>
            <value>
                <fullName>Bella Via Stone</fullName>
            </value>
            <value>
                <fullName>Boards</fullName>
            </value>
            <value>
                <fullName>Bordeaux Cradle</fullName>
            </value>
            <value>
                <fullName>BPI</fullName>
            </value>
            <value>
                <fullName>Brandon</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>Charleston Cradle</fullName>
            </value>
            <value>
                <fullName>Chip Chest</fullName>
            </value>
            <value>
                <fullName>CMH</fullName>
            </value>
            <value>
                <fullName>CR Design Center</fullName>
            </value>
            <value>
                <fullName>Dal Tile</fullName>
            </value>
            <value>
                <fullName>Danya Cradle</fullName>
            </value>
            <value>
                <fullName>Design Center</fullName>
            </value>
            <value>
                <fullName>Easywood</fullName>
            </value>
            <value>
                <fullName>Ecowood Culla</fullName>
            </value>
            <value>
                <fullName>Elevation</fullName>
            </value>
            <value>
                <fullName>Emser</fullName>
            </value>
            <value>
                <fullName>Entourage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>