force-app/main/default/objects/Display_Asset__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Olean</fullName>
                <color>#0B6FCE</color>
                <label>American Olean</label>
            </value>
            <value>
                <fullName>Aqua Mix</fullName>
                <color>#78C953</color>
                <label>Aqua Mix</label>
            </value>
            <value>
                <fullName>Atlas Concorde</fullName>
                <color>#E27001</color>
                <label>Atlas Concorde</label>
            </value>
            <value>
                <fullName>Casa Dolce Casa</fullName>
                <color>#A845DC</color>
                <label>Casa Dolce Casa</label>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <color>#F3D904</color>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Crossville</fullName>
                <color>#A53711</color>
                <label>Crossville</label>
            </value>
            <value>
                <fullName>Custom Building Products</fullName>
                <color>#66E9BD</color>
                <label>Custom Building Products</label>
            </value>
            <value>
                <fullName>E&amp;S</fullName>
                <color>#0B24BE</color>
                <label>E&amp;S</label>
            </value>
            <value>
                <fullName>Florida Tile</fullName>
                <color>#419249</color>
                <label>Florida Tile</label>
            </value>
            <value>
                <fullName>Florim</fullName>
                <color>#B6E32E</color>
                <label>Florim</label>
            </value>
            <value>
                <fullName>Global</fullName>
                <color>#641CCF</color>
                <label>Global</label>
            </value>
            <value>
                <fullName>Imola</fullName>
                <color>#F96FB7</color>
                <label>Imola</label>
            </value>
            <value>
                <fullName>Jeffrey Court</fullName>
                <color>#2F5D85</color>
                <label>Jeffrey Court</label>
            </value>
            <value>
                <fullName>Laticrete</fullName>
                <color>#AFCADF</color>
                <label>Laticrete</label>
            </value>
            <value>
                <fullName>Louisville Tile</fullName>
                <color>#8F6429</color>
                <label>Louisville Tile</label>
            </value>
            <value>
                <fullName>Mandala</fullName>
                <color>#EFAE73</color>
                <label>Mandala</label>
            </value>
            <value>
                <fullName>Marca Corona</fullName>
                <color>#57F17C</color>
                <label>Marca Corona</label>
            </value>
            <value>
                <fullName>Mediterranea</fullName>
                <color>#0B6FCE</color>
                <label>Mediterranea</label>
            </value>
            <value>
                <fullName>Mission Stone</fullName>
                <color>#78C953</color>
                <label>Mission Stone</label>
            </value>
            <value>
                <fullName>MLW</fullName>
                <color>#E27001</color>
                <label>MLW</label>
            </value>
            <value>
                <fullName>Noble</fullName>
                <color>#A845DC</color>
                <label>Noble</label>
            </value>
            <value>
                <fullName>Oceanside</fullName>
                <color>#F3D904</color>
                <label>Oceanside</label>
            </value>
            <value>
                <fullName>Orchid</fullName>
                <color>#A53711</color>
                <label>Orchid</label>
            </value>
            <value>
                <fullName>Panaria</fullName>
                <color>#66E9BD</color>
                <label>Panaria</label>
            </value>
            <value>
                <fullName>Questech</fullName>
                <color>#0B24BE</color>
                <label>Questech</label>
            </value>
            <value>
                <fullName>Ragno</fullName>
                <color>#419249</color>
                <label>Ragno</label>
            </value>
            <value>
                <fullName>Realstone</fullName>
                <color>#B6E32E</color>
                <label>Realstone</label>
            </value>
            <value>
                <fullName>Royal Mosa</fullName>
                <color>#641CCF</color>
                <label>Royal Mosa</label>
            </value>
            <value>
                <fullName>Schluter</fullName>
                <color>#F96FB7</color>
                <label>Schluter</label>
            </value>
            <value>
                <fullName>Sonoma Market</fullName>
                <color>#2F5D85</color>
                <label>Sonoma Market</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>